public class DualNumber {
  public double u;      // Valor funció
  public double uprime; // Derivada funció

  public DualNumber(double u1, double u2) {
    this.u = u1;
    this.uprime = u2;
  }
}